--- a/css/style.css
+++ b/css/style.css
@@ -17,53 +17,140 @@ body{
     font-family: 'Manrope', sans-serif;
     background-color: #292929;
     color: #FFFFFF;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+
+body.ligth{
+    background-color: #FFFFFF;
+    color: #292929;
 }
 
 .header{
-    padding: 2rem 2rem 1.5rem;
+    padding: 1rem 2rem 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.header__logo{
+    width: 130px;
 }
 
 .header__title{
+    margin: 1rem 0;
     font-size: 3rem;
-    margin-right: 2rem;
 }
 
 .header__search{
+    align-self: flex-start;
     background-color: transparent;
     border: 2px solid #EBE5E2;
     border-radius: 50px;
     padding: 0.5rem 1rem;
-    color: #FFFFFF;
+    color: inherit;
     font-size: 1.2rem;
+    margin: 1rem 0;
 }
 
 .header__search:focus{
     outline: none;
 }
 
-.main{ 
+.checkbox-toggle{
+    opacity: 0;
+    position: absolute;
+}
+
+.checkbox-toggle:checked + .label-toggle .ball{
+    -webkit-transform: translateX(24px);
+        -ms-transform: translateX(24px);
+            transform: translateX(24px);
+}
+
+.label-toggle{
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    background-color: #1C1C2C;
+    width: 56px;
+    height: 30px;
+    border-radius: 50px;
+    padding: 0.4rem;
+}
+
+.fa-moon{
+    color: #eed058;
+}
+
+.fa-sun{
+    color: #F1C40F;
+}
+
+.ball{
+    position: absolute;
+    top: 4px;
+    left: 5px;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    -webkit-transition: -webkit-transform 0.2s linear;
+    transition: -webkit-transform 0.2s linear;
+    -o-transition: transform 0.2s linear;
+    transition: transform 0.2s linear;
+    transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+}
+
+.main__title{
+    text-align: center;
+}
+
+.main__container{ 
+    display: -webkit-box; 
+    display: -ms-flexbox; 
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .movie{
     max-width: 280px;
     height: auto;
     margin: 1.5rem;
-    background-color: #1C1C2C;
-    box-shadow: 6px 6px 21px 1px rgba(0,0,0,0.5);
+    background-color: inherit;
+    -webkit-box-shadow: 6px 6px 21px 1px rgba(0,0,0,0.5);
+            box-shadow: 6px 6px 21px 1px rgba(0,0,0,0.5);
 }
 
 .movie__poster{
     position: relative;
 }
 
-.movie__poster:hover .overview{
+.movie__poster:hover .overview,
+.movie__poster:focus .overview{
     opacity: 1;
 }
 
@@ -76,7 +163,10 @@ body{
     left: 0;
     padding: 1rem;
     background-color: rgba(0,0,0,0.6);
+    color: #FFFFFF;
     overflow: auto;
+    -webkit-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
     transition: all 0.5s ease-in;
 }
 
@@ -95,9 +185,15 @@ body{
 }
 
 .movie__info{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 1rem;
 }
 
@@ -107,6 +203,7 @@ body{
 }
 
 .movie__rating{
+    color: #FFFFFF;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.26);
     padding: 0.3rem 0.4rem;
@@ -124,5 +221,3 @@ body{
 .movie__rating.low_rate{
     background-color:#990000;
 }
-
-
